--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "run": "webpack-dev-server",
+    "build": "webpack"
   },
   "author": "",
   "license": "ISC",
@@ -18,9 +20,11 @@
     "@types/istanbul-reports": "^3.0.1",
     "@types/react-dom": "^18.2.5",
     "babel-loader": "^9.1.2",
+    "css-loader": "^6.8.1",
     "express": "^4.18.2",
     "firebase": "^9.22.2",
     "html-webpack-plugin": "^5.5.1",
+    "style-loader": "^3.3.3",
     "ts-loader": "^9.4.3",
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4",
