--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-loader": "^9.1.2",
     "css-loader": "^6.8.1",
     "express": "^4.18.2",
+    "file-loader": "^6.2.0",
     "firebase": "^9.22.2",
     "html-webpack-plugin": "^5.5.1",
     "style-loader": "^3.3.3",
