--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@types/istanbul-reports": "^3.0.1",
     "@types/react-dom": "^18.2.5",
     "babel-loader": "^9.1.2",
+    "body-parser": "^1.20.2",
     "css-loader": "^6.8.1",
     "express": "^4.18.2",
     "file-loader": "^6.2.0",
     "firebase": "^9.22.2",
     "html-webpack-plugin": "^5.5.1",
+    "mysql": "^2.18.1",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.3",
     "url-loader": "^4.1.1",
