--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^9.22.2",
     "html-webpack-plugin": "^5.5.1",
     "mysql": "^2.18.1",
+    "react-router-dom": "^6.13.0",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.3",
     "url-loader": "^4.1.1",
