--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ firebase-debug.*.log*
 # Firebase config
 ./src/firebase.js
 
+# json local data
+src/tarkov-data
+
 # Uncomment this if you'd like others to create their own Firebase project.
 # For a team working on the same Firebase project(s), it is recommended to leave
 # it commented so all members can deploy to the same project(s) in .firebaserc.
