--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "crypto-browserify": "^3.12.0",
     "net-browserify": "^0.2.4",
     "nocache": "^4.0.0",
     "react": "^18.2.0",
@@ -25,6 +26,7 @@
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
     "@types/istanbul-reports": "^3.0.1",
+    "@types/jest": "^29.5.4",
     "@types/react-dom": "^18.2.5",
     "babel-loader": "^9.1.2",
     "body-parser": "^1.20.2",
